--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,10 @@ body {
   width: 100%;
   height: 100%; }
 
+@media (min-width: 768px) {
+  .button-collapse {
+    display: none; } }
+
 #landing-page {
   width: 100%;
   height: 100%;
@@ -13,22 +17,36 @@ body {
     align-items: center;
     justify-content: space-between;
     height: 100%;
-    width: 100%; }
-    #landing-page .flex-wrapper nav .nav-wrapper {
-      padding: 0 10px; }
+    width: 100%;
+    overflow: hidden; }
+    #landing-page .flex-wrapper nav .nav-header {
+      height: 150px;
+      background: linear-gradient(rgba(1, 87, 155, 0.7), rgba(1, 87, 155, 0.7)), url("/images/spiration-light.png");
+      width: 100%; }
     #landing-page .flex-wrapper nav #nav-button {
       height: 38px; }
+    #landing-page .flex-wrapper nav #slide-out {
+      width: 250px; }
+      @media (min-width: 576px) {
+        #landing-page .flex-wrapper nav #slide-out {
+          width: 320px; } }
     #landing-page .flex-wrapper .landing-page-headline {
-      font-family: 'Roboto Condensed', sans-serif;
       text-align: center; }
       #landing-page .flex-wrapper .landing-page-headline h1 {
         font-weight: 300;
         font-size: 35px;
-        color: #F5F5F5; }
+        color: #F5F5F5;
+        font-family: 'Roboto Condensed', sans-serif; }
+        @media (min-width: 576px) {
+          #landing-page .flex-wrapper .landing-page-headline h1 {
+            font-size: 65px; } }
       #landing-page .flex-wrapper .landing-page-headline h2 {
         font-size: 25px;
         font-weight: 300;
         color: #E0E0E0; }
+        @media (min-width: 576px) {
+          #landing-page .flex-wrapper .landing-page-headline h2 {
+            font-size: 35px; } }
     #landing-page .flex-wrapper .ide {
       width: 90%;
       height: 180px;
@@ -36,7 +54,13 @@ body {
       border-top-left-radius: 15px;
       border-top-right-radius: 15px;
       position: relative;
-      padding: 0 15px; }
+      padding: 0 15px;
+      transition: all 1.5s ease-out;
+      top: 100%; }
+      @media (min-width: 576px) {
+        #landing-page .flex-wrapper .ide {
+          height: 240px;
+          padding: 0 20px; } }
       #landing-page .flex-wrapper .ide .ide-header {
         top: 0;
         left: 0;
@@ -49,6 +73,11 @@ body {
           width: 5px;
           border-radius: 10px;
           margin-right: 5px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-header .icon, #landing-page .flex-wrapper .ide .ide-header .icon-exit, #landing-page .flex-wrapper .ide .ide-header .icon-minimize, #landing-page .flex-wrapper .ide .ide-header .icon-expand {
+              height: 9px;
+              width: 9px;
+              margin-right: 7px; } }
         #landing-page .flex-wrapper .ide .ide-header .icon-exit {
           background-color: #F44336; }
         #landing-page .flex-wrapper .ide .ide-header .icon-minimize {
@@ -60,10 +89,21 @@ body {
         flex-direction: column;
         color: white;
         font-size: 18px; }
+        #landing-page .flex-wrapper .ide .ide-content .line {
+          position: relative;
+          opacity: 0;
+          transition: all 1.5s ease-out; }
+        @media (min-width: 576px) {
+          #landing-page .flex-wrapper .ide .ide-content {
+            font-size: 22px; } }
         #landing-page .flex-wrapper .ide .ide-content .ide-line, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-third {
           display: flex;
           align-items: center;
           height: 15px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .ide-line, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-third {
+              height: 20px;
+              margin-top: 2px; } }
         #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first {
           padding-left: 15px; }
         #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second {
@@ -76,57 +116,97 @@ body {
           border-radius: 5px;
           background-color: #FF7043;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .code {
+              height: 14px;
+              width: 87.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .html-tag {
           height: 9px;
           width: 20px;
           border-radius: 5px;
           background-color: #424242;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .html-tag {
+              height: 14px;
+              width: 50px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-tag {
           height: 9px;
           width: 20px;
           border-radius: 5px;
           background-color: #616161;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-tag {
+              height: 14px;
+              width: 50px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-first-tag {
           height: 9px;
           width: 85px;
           border-radius: 5px;
           background-color: #757575;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-first-tag {
+              height: 14px;
+              width: 212.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-second-tag {
           height: 9px;
           width: 25px;
           border-radius: 5px;
           background-color: #757575;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-second-tag {
+              height: 14px;
+              width: 62.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-second-content {
           height: 9px;
           width: 50px;
           border-radius: 5px;
           background-color: #FDD835;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-second-content {
+              height: 14px;
+              width: 125px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-tag {
           height: 9px;
           width: 20px;
           border-radius: 5px;
           background-color: #757575;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-tag {
+              height: 14px;
+              width: 50px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-first-tag {
           height: 9px;
           width: 45px;
           border-radius: 5px;
           background-color: #9E9E9E;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-first-tag {
+              height: 14px;
+              width: 112.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-second-tag {
           height: 9px;
           width: 35px;
           border-radius: 5px;
           background-color: #BDBDBD;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-second-tag {
+              height: 14px;
+              width: 87.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-second-tag-content {
           height: 9px;
           width: 75px;
           border-radius: 5px;
           background-color: #FDD835;
           margin: 0 4px; }
+          @media (min-width: 576px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-second-tag-content {
+              height: 14px;
+              width: 187.5px; } }
