--- a/css/style.css
+++ b/css/style.css
@@ -19,6 +19,11 @@ body {
     height: 100%;
     width: 100%;
     overflow: hidden; }
+    #landing-page .flex-wrapper nav .navigation {
+      display: none; }
+      @media (min-width: 768px) {
+        #landing-page .flex-wrapper nav .navigation {
+          display: inline-block; } }
     #landing-page .flex-wrapper nav .nav-header {
       height: 150px;
       background: linear-gradient(rgba(1, 87, 155, 0.7), rgba(1, 87, 155, 0.7)), url("/images/spiration-light.png");
@@ -40,6 +45,9 @@ body {
         @media (min-width: 576px) {
           #landing-page .flex-wrapper .landing-page-headline h1 {
             font-size: 65px; } }
+        @media (min-width: 992px) {
+          #landing-page .flex-wrapper .landing-page-headline h1 {
+            font-size: 85px; } }
       #landing-page .flex-wrapper .landing-page-headline h2 {
         font-size: 25px;
         font-weight: 300;
@@ -47,6 +55,9 @@ body {
         @media (min-width: 576px) {
           #landing-page .flex-wrapper .landing-page-headline h2 {
             font-size: 35px; } }
+        @media (min-width: 992px) {
+          #landing-page .flex-wrapper .landing-page-headline h2 {
+            font-size: 45px; } }
     #landing-page .flex-wrapper .ide {
       width: 90%;
       height: 180px;
@@ -61,6 +72,10 @@ body {
         #landing-page .flex-wrapper .ide {
           height: 240px;
           padding: 0 20px; } }
+      @media (min-width: 992px) {
+        #landing-page .flex-wrapper .ide {
+          height: 300px;
+          width: 75%; } }
       #landing-page .flex-wrapper .ide .ide-header {
         top: 0;
         left: 0;
@@ -78,6 +93,11 @@ body {
               height: 9px;
               width: 9px;
               margin-right: 7px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-header .icon, #landing-page .flex-wrapper .ide .ide-header .icon-exit, #landing-page .flex-wrapper .ide .ide-header .icon-minimize, #landing-page .flex-wrapper .ide .ide-header .icon-expand {
+              height: 11px;
+              width: 11px;
+              margin-right: 8px; } }
         #landing-page .flex-wrapper .ide .ide-header .icon-exit {
           background-color: #F44336; }
         #landing-page .flex-wrapper .ide .ide-header .icon-minimize {
@@ -91,13 +111,16 @@ body {
         font-size: 18px;
         overflow: hidden;
         height: 100%; }
+        @media (min-width: 576px) {
+          #landing-page .flex-wrapper .ide .ide-content {
+            font-size: 22px; } }
+        @media (min-width: 992px) {
+          #landing-page .flex-wrapper .ide .ide-content {
+            font-size: 25px; } }
         #landing-page .flex-wrapper .ide .ide-content .line {
           position: relative;
           top: 100%;
           transition: all 1s ease-out; }
-        @media (min-width: 576px) {
-          #landing-page .flex-wrapper .ide .ide-content {
-            font-size: 22px; } }
         #landing-page .flex-wrapper .ide .ide-content .ide-line, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-third {
           display: flex;
           align-items: center;
@@ -106,6 +129,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .ide-line, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-third {
               height: 20px;
               margin-top: 2px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .ide-line, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second, #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-third {
+              height: 25px;
+              margin-top: 3px; } }
         #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-first {
           padding-left: 15px; }
         #landing-page .flex-wrapper .ide .ide-content .ide-line-indented-second {
@@ -122,6 +149,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .code {
               height: 14px;
               width: 87.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .code {
+              height: 16px;
+              width: 122.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .html-tag {
           height: 9px;
           width: 20px;
@@ -132,6 +163,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .html-tag {
               height: 14px;
               width: 50px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .html-tag {
+              height: 16px;
+              width: 70px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-tag {
           height: 9px;
           width: 20px;
@@ -142,6 +177,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .head-tag {
               height: 14px;
               width: 50px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-tag {
+              height: 16px;
+              width: 70px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-first-tag {
           height: 9px;
           width: 85px;
@@ -152,6 +191,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .head-first-tag {
               height: 14px;
               width: 212.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-first-tag {
+              height: 16px;
+              width: 297.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-second-tag {
           height: 9px;
           width: 25px;
@@ -162,6 +205,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .head-second-tag {
               height: 14px;
               width: 62.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-second-tag {
+              height: 16px;
+              width: 87.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .head-second-content {
           height: 9px;
           width: 50px;
@@ -172,6 +219,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .head-second-content {
               height: 14px;
               width: 125px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .head-second-content {
+              height: 16px;
+              width: 175px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-tag {
           height: 9px;
           width: 20px;
@@ -182,6 +233,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .body-tag {
               height: 14px;
               width: 50px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-tag {
+              height: 16px;
+              width: 70px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-first-tag {
           height: 9px;
           width: 45px;
@@ -192,6 +247,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .body-first-tag {
               height: 14px;
               width: 112.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-first-tag {
+              height: 16px;
+              width: 157.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-second-tag {
           height: 9px;
           width: 35px;
@@ -202,6 +261,10 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .body-second-tag {
               height: 14px;
               width: 87.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-second-tag {
+              height: 16px;
+              width: 122.5px; } }
         #landing-page .flex-wrapper .ide .ide-content .body-second-tag-content {
           height: 9px;
           width: 75px;
@@ -212,3 +275,7 @@ body {
             #landing-page .flex-wrapper .ide .ide-content .body-second-tag-content {
               height: 14px;
               width: 187.5px; } }
+          @media (min-width: 992px) {
+            #landing-page .flex-wrapper .ide .ide-content .body-second-tag-content {
+              height: 16px;
+              width: 262.5px; } }
