--- a/sass/style.scss
+++ b/sass/style.scss
@@ -17,7 +17,7 @@ body {
 #landing-page {
   width: 100%;
   height: 100%;
-  background-color: #0277BD;
+  background-color: $light-blue;
 
   .flex-wrapper {
     display: flex;
@@ -70,7 +70,7 @@ body {
         }
 
         @include lg() {
-          font-size: 85px;
+          font-size: 75px;
         }
       }
       h2 {
@@ -83,7 +83,7 @@ body {
         }
 
         @include lg() {
-          font-size: 45px;
+          font-size: 40px;
         }
       }
     }
@@ -91,7 +91,7 @@ body {
     .ide {
       width: 90%;
       height: 180px;
-      background-color: #212121;
+      background-color: $device-gray;
       border-top-left-radius: 15px;
       border-top-right-radius: 15px;
       position: relative;
@@ -107,6 +107,10 @@ body {
       @include lg() {
         height: 300px;
         width: 75%;
+      }
+
+      @include xl() {
+        width: 55%;
       }
 
       .ide-header {
@@ -250,6 +254,54 @@ body {
           @include code-sm(75px, #FDD835)
         }
 
+      }
+    }
+  }
+}
+
+#responsive-design {
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+
+  .mobile {
+    margin-top: 10px;
+    background: $device-gray;
+    width: 150px;
+    height: 250px;
+    border-radius: 25px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+
+    .mobile-screen {
+      width: 80%;
+      height: 80%;
+      background-color: $screen-white;
+
+
+
+      .mobile-content {
+        display: flex;
+        flex-direction: column;
+        justify-content: space-between;
+        align-items: center;
+        height: 100%;
+        padding-bottom: 10px;
+
+        .mobile-nav {
+          height: 30px;
+          width: 100%;
+          background-color: $primary-blue;
+          align-self: flex-start;
+        }
+
+        .mobile-block {
+          background-color: #BDBDBD;
+          height: 15%;
+          width: 80%;
+        }
       }
     }
   }
