--- a/sass/style.scss
+++ b/sass/style.scss
@@ -5,6 +5,8 @@
 body {
   width: 100%;
   height: 100%;
+  overflow-y: hidden !important; // hide vertical
+
 }
 
 .button-collapse {
@@ -12,7 +14,6 @@ body {
     display: none;
   }
 }
-
 
 #landing-page {
   width: 100%;
@@ -121,8 +122,6 @@ body {
         display: flex;
         align-items: center;
 
-
-
         .icon {
           height: 5px;
           width: 5px;
@@ -159,7 +158,7 @@ body {
         }
       }
 
-      .ide-content{
+      .ide-content {
         display: flex;
         flex-direction: column;
         color: white;
@@ -180,8 +179,6 @@ body {
           top: 100%;
           transition: all 1s ease-out;
         }
-
-
 
         .ide-line {
           display: flex;
@@ -260,9 +257,13 @@ body {
 }
 
 #responsive-design {
+  overflow-y: hidden; // hide vertical
   display: flex;
-  flex-direction: column;
+  flex-direction: row;
+  justify-content: center;
   align-items: center;
+  transition: all 3s ease-out;
+  height: 100%;
 
   .mobile {
     margin-top: 10px;
@@ -273,6 +274,9 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+    transition: 1.5s ease-out;
+    position: absolute;
+    right: -100%;
 
     .mobile-screen {
       width: 80%;
@@ -309,9 +313,14 @@ body {
     width: 150px;
     height: 250px;
     border-radius: 25px;
-    display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 1.5s ease-out;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    position: absolute;
+    right: -100%;
 
     &-screen {
       width: 80%;
@@ -354,14 +363,17 @@ body {
   }
 
   .desktop {
+    display: flex;
     margin-top: 10px;
     background: $device-gray;
     width: 280px;
     height: 225px;
     border-radius: 25px;
-    display: flex;
     align-items: center;
     justify-content: center;
+    transition: all 1.5s ease-out;
+    position: absolute;
+    right: -100%;
 
     &-screen {
       width: 85%;
@@ -371,8 +383,6 @@ body {
       flex-direction: column;
 
     }
-
-
 
     &-content {
       display: flex;
