--- a/css/style.css
+++ b/css/style.css
@@ -1,8 +1,22 @@
 @import url("https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&subset=latin-ext");
 body {
   width: 100%;
-  height: 100%;
-  overflow-x: hidden !important; }
+  height: 100%; }
+  body .body-wrapper {
+    width: inherit;
+    height: inherit;
+    overflow-x: hidden !important;
+    position: fixed; }
+
+h1 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 30px;
+  color: #212121; }
+
+p {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 16px;
+  color: #616161; }
 
 @media (min-width: 768px) {
   .button-collapse {
@@ -285,127 +299,146 @@ body {
               width: 262.5px; } }
 
 #responsive-design {
-  overflow-y: hidden;
+  overflow-x: hidden;
   display: flex;
-  flex-direction: row;
-  justify-content: center;
+  flex-direction: column;
   align-items: center;
-  transition: all 3s ease-out;
-  height: 100%; }
-  #responsive-design .mobile {
-    margin-top: 10px;
-    background: #212121;
-    width: 125px;
-    height: 200px;
-    border-radius: 25px;
+  transition: all 3s ease-out; }
+  @media (min-width: 768px) {
+    #responsive-design {
+      flex-direction: row; } }
+  #responsive-design .rwd-animation-wrapper {
+    position: relative;
     display: flex;
     align-items: center;
     justify-content: center;
-    transition: 1.5s ease-out;
-    position: absolute;
-    right: -100%; }
-    #responsive-design .mobile .mobile-screen {
-      width: 80%;
-      height: 80%;
-      background-color: #F5F5F5; }
-      #responsive-design .mobile .mobile-screen .mobile-content {
+    width: 100%;
+    height: 210px;
+    margin: 15px 0; }
+    @media (min-width: 768px) {
+      #responsive-design .rwd-animation-wrapper {
+        flex-basis: 50%; } }
+    #responsive-design .rwd-animation-wrapper .mobile {
+      background: #212121;
+      width: 100px;
+      height: 150px;
+      border-radius: 25px;
+      display: flex;
+      align-items: center;
+      justify-content: center;
+      transition: 1.5s ease-out;
+      position: absolute;
+      right: -100%; }
+      #responsive-design .rwd-animation-wrapper .mobile .mobile-screen {
+        width: 75%;
+        height: 75%;
+        background-color: #F5F5F5; }
+        #responsive-design .rwd-animation-wrapper .mobile .mobile-screen .mobile-content {
+          display: flex;
+          flex-direction: column;
+          justify-content: space-between;
+          align-items: center;
+          height: 100%;
+          padding-bottom: 10px; }
+          #responsive-design .rwd-animation-wrapper .mobile .mobile-screen .mobile-content .mobile-nav {
+            height: 20px;
+            width: 100%;
+            background-color: #01579b;
+            align-self: flex-start; }
+          #responsive-design .rwd-animation-wrapper .mobile .mobile-screen .mobile-content .mobile-block {
+            background-color: #BDBDBD;
+            height: 15%;
+            width: 80%; }
+    #responsive-design .rwd-animation-wrapper .tablet {
+      background: #212121;
+      width: 125px;
+      height: 200px;
+      border-radius: 25px;
+      align-items: center;
+      justify-content: center;
+      transition: all 1.5s ease-out;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+      position: absolute;
+      right: -100%; }
+      #responsive-design .rwd-animation-wrapper .tablet-screen {
+        width: 75%;
+        height: 75%;
+        background-color: #F5F5F5;
         display: flex;
-        flex-direction: column;
+        flex-direction: column; }
+      #responsive-design .rwd-animation-wrapper .tablet-nav {
+        height: 20px;
+        width: 100%;
+        background-color: #01579b;
+        align-self: flex-start; }
+      #responsive-design .rwd-animation-wrapper .tablet-content .tablet-wrapper {
+        width: 90%;
+        margin: 0 auto;
+        display: flex;
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: center;
-        height: 100%;
-        padding-bottom: 10px; }
-        #responsive-design .mobile .mobile-screen .mobile-content .mobile-nav {
+        padding-top: 5px; }
+        #responsive-design .rwd-animation-wrapper .tablet-content .tablet-wrapper > .tablet-block {
+          background-color: #BDBDBD;
+          height: 13%;
+          flex-basis: 100%;
+          margin: 5px auto; }
+        #responsive-design .rwd-animation-wrapper .tablet-content .tablet-wrapper > .tablet-block ~ .tablet-block {
+          flex-basis: 45%; }
+    #responsive-design .rwd-animation-wrapper .desktop {
+      display: flex;
+      background: #212121;
+      width: 240px;
+      height: 210px;
+      border-radius: 25px;
+      align-items: center;
+      justify-content: center;
+      transition: all 1.5s ease-out;
+      position: absolute;
+      right: -100%; }
+      #responsive-design .rwd-animation-wrapper .desktop-screen {
+        width: 80%;
+        height: 75%;
+        background-color: #F5F5F5;
+        display: flex;
+        flex-direction: column; }
+      #responsive-design .rwd-animation-wrapper .desktop-content {
+        display: flex;
+        flex-direction: column; }
+        #responsive-design .rwd-animation-wrapper .desktop-content .desktop-nav {
           height: 30px;
           width: 100%;
           background-color: #01579b;
           align-self: flex-start; }
-        #responsive-design .mobile .mobile-screen .mobile-content .mobile-block {
-          background-color: #BDBDBD;
-          height: 15%;
-          width: 80%; }
-  #responsive-design .tablet {
-    margin-top: 10px;
-    background: #212121;
-    width: 150px;
-    height: 250px;
-    border-radius: 25px;
-    align-items: center;
-    justify-content: center;
-    transition: all 1.5s ease-out;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    position: absolute;
-    right: -100%; }
-    #responsive-design .tablet-screen {
-      width: 80%;
-      height: 80%;
-      background-color: #F5F5F5;
-      display: flex;
-      flex-direction: column; }
-    #responsive-design .tablet-nav {
-      height: 30px;
-      width: 100%;
-      background-color: #01579b;
-      align-self: flex-start; }
-    #responsive-design .tablet-content .tablet-wrapper {
-      width: 90%;
-      margin: 0 auto;
-      display: flex;
-      flex-wrap: wrap;
-      justify-content: space-between;
-      align-items: center;
-      padding-top: 5px; }
-      #responsive-design .tablet-content .tablet-wrapper > .tablet-block {
-        background-color: #BDBDBD;
-        height: 15%;
-        flex-basis: 100%;
-        margin: 5px auto; }
-      #responsive-design .tablet-content .tablet-wrapper > .tablet-block ~ .tablet-block {
-        flex-basis: 45%; }
-  #responsive-design .desktop {
-    display: flex;
-    margin-top: 10px;
-    background: #212121;
-    width: 280px;
-    height: 225px;
-    border-radius: 25px;
-    align-items: center;
-    justify-content: center;
-    transition: all 1.5s ease-out;
-    position: absolute;
-    right: -100%; }
-    #responsive-design .desktop-screen {
-      width: 85%;
-      height: 80%;
-      background-color: #F5F5F5;
-      display: flex;
-      flex-direction: column; }
-    #responsive-design .desktop-content {
-      display: flex;
-      flex-direction: column; }
-      #responsive-design .desktop-content .desktop-nav {
-        height: 30px;
-        width: 100%;
-        background-color: #01579b;
-        align-self: flex-start; }
-      #responsive-design .desktop-content .desktop-wrapper {
-        display: flex;
-        margin-top: 30px;
-        flex-direction: column;
-        padding: 0 10px; }
-        #responsive-design .desktop-content .desktop-wrapper .desktop-block {
-          background-color: #BDBDBD;
-          margin-top: 10px;
-          height: 25px; }
-        #responsive-design .desktop-content .desktop-wrapper .desktop-row {
+        #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper {
           display: flex;
-          flex-direction: row;
-          justify-content: space-between; }
-          #responsive-design .desktop-content .desktop-wrapper .desktop-row .left-row {
-            flex-basis: 50%; }
-            #responsive-design .desktop-content .desktop-wrapper .desktop-row .left-row .desktop-block {
-              height: 60px; }
-          #responsive-design .desktop-content .desktop-wrapper .desktop-row .right-row {
-            flex-basis: 45%; }
+          margin-top: 30px;
+          flex-direction: column;
+          padding: 0 10px; }
+          #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper .desktop-block {
+            background-color: #BDBDBD;
+            margin-top: 10px;
+            height: 20px; }
+          #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper .desktop-row {
+            display: flex;
+            flex-direction: row;
+            justify-content: space-between; }
+            #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper .desktop-row .left-row {
+              flex-basis: 50%; }
+              #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper .desktop-row .left-row .desktop-block {
+                height: 50px; }
+            #responsive-design .rwd-animation-wrapper .desktop-content .desktop-wrapper .desktop-row .right-row {
+              flex-basis: 45%; }
+  #responsive-design .rwd-description h1 {
+    text-align: center;
+    margin: 5px 0; }
+  #responsive-design .rwd-description p {
+    text-align: center; }
+  @media (min-width: 768px) {
+    #responsive-design .rwd-description {
+      flex-basis: 50%;
+      height: 100%;
+      z-index: 5; } }
