--- a/sass/_rwd-section.scss
+++ b/sass/_rwd-section.scss
@@ -4,11 +4,14 @@
   flex-direction: column;
   align-items: center;
   transition: all 3s ease-out;
-  padding-top: 15px;
+  padding: 20px 0;
+
 
   @include md() {
     flex-direction: row;
-
+    height: 500px;
+    justify-content: center;
+    padding-top: 0;
   }
 
   .rwd-animation-wrapper {
@@ -19,13 +22,20 @@
     width: 100%;
     height: 210px;
     margin: 15px 0;
+
+    @include sm() {
+      height: 250px;
+    }
+
     @include md() {
       flex-basis: 50%;
+      height: 100%;
+      margin: 0;
     }
     .mobile {
       background: $device-gray;
-      width: 100px;
-      height: 150px;
+      width: 120px;
+      height: 190px;
       border-radius: 25px;
       display: flex;
       align-items: center;
@@ -33,6 +43,15 @@
       transition: 1.5s ease-out;
       position: absolute;
       right: -100%;
+
+      @include sm() {
+        width: 130px;
+        height: 220px;
+      }
+
+      @include md() {
+        bottom: calc(50%  - 73.3px);
+      }
 
       .mobile-screen {
         width: 75%;
@@ -65,8 +84,8 @@
 
     .tablet {
       background: $device-gray;
-      width: 125px;
-      height: 200px;
+      width: 170px;
+      height: 210px;
       border-radius: 25px;
       align-items: center;
       justify-content: center;
@@ -76,6 +95,15 @@
       align-items: center;
       position: absolute;
       right: -100%;
+
+      @include sm() {
+        height: 260px;
+        width: 195px;
+      }
+
+      @include md() {
+        bottom: calc(50%  - 86.6px);
+      }
 
       &-screen {
         width: 75%;
@@ -108,6 +136,10 @@
             height: 13%;
             flex-basis: 100%;
             margin: 5px auto;
+
+            @include sm() {
+              height: 15%;
+            }
           }
 
           & > .tablet-block ~ .tablet-block {
@@ -120,7 +152,7 @@
     .desktop {
       display: flex;
       background: $device-gray;
-      width: 240px;
+      width: 260px;
       height: 210px;
       border-radius: 25px;
       align-items: center;
@@ -128,6 +160,15 @@
       transition: all 1.5s ease-out;
       position: absolute;
       right: -100%;
+
+      @include sm() {
+        width: 330px;
+        height: 250px;
+      }
+
+      @include md() {
+        bottom: calc(50%  - 83.3px);
+      }
 
       &-screen {
         width: 80%;
@@ -141,12 +182,17 @@
       &-content {
         display: flex;
         flex-direction: column;
+        height: 100%;
 
         .desktop-nav {
           height: 30px;
           width: 100%;
           background-color: $primary-blue;
           align-self: flex-start;
+
+          @include sm() {
+            height: 35px;
+          }
         }
 
         .desktop-wrapper {
@@ -154,11 +200,22 @@
           margin-top: 30px;
           flex-direction: column;
           padding: 0 10px;
+          //TODO jak to zamienić na procenty
+          height: 127.5px;
+
+          @include sm() {
+            height: 152.5px;
+            margin-top: 35px;
+          }
 
           .desktop-block {
             background-color: #BDBDBD;
             margin-top: 10px;
-            height: 20px;
+            height: 15%;
+
+            @include md() {
+              height: 16%;
+            }
           }
 
           .desktop-row {
@@ -170,7 +227,7 @@
               flex-basis: 50%;
 
               .desktop-block {
-                height: 50px;
+                height: 38.5%;
               }
 
             }
@@ -187,6 +244,13 @@
     }
   }
   .rwd-description {
+    display: flex;
+    flex-direction: column;
+
+    .rwd-description-wrapper {
+      position: relative;
+      top: 20%;
+    }
 
     h1 {
       text-align: center;
@@ -200,6 +264,7 @@
     @include md() {
       flex-basis: 50%;
       height: 100%;
+      background-color: white;
       z-index: 5;
     }
   }
