--- a/sass/_rwd-section.scss
+++ b/sass/_rwd-section.scss
@@ -50,7 +50,7 @@
       }
 
       @include md() {
-        bottom: calc(50%  - 73.3px);
+
       }
 
       .mobile-screen {
@@ -101,10 +101,6 @@
         width: 195px;
       }
 
-      @include md() {
-        bottom: calc(50%  - 86.6px);
-      }
-
       &-screen {
         width: 75%;
         height: 75%;
@@ -114,7 +110,7 @@
       }
 
       &-nav {
-        height: 20px;
+        height: 25px;
         width: 100%;
         background-color: $primary-blue;
         align-self: flex-start;
@@ -167,7 +163,7 @@
       }
 
       @include md() {
-        bottom: calc(50%  - 83.3px);
+
       }
 
       &-screen {
@@ -246,10 +242,19 @@
   .rwd-description {
     display: flex;
     flex-direction: column;
+    justify-content: center;
+    align-items: center;
+
+    @include md() {
+      height: 100%;
+    }
 
     .rwd-description-wrapper {
       position: relative;
-      top: 20%;
+
+      @include md() {
+        margin: 0 15px;
+      }
     }
 
     h1 {
