Dodanie sekcji technology (wstepne ukonczenie responsywnosci)

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -1,6 +1,8 @@
+@import "font-awesome/font-awesome";
 @import 'includes/variables';
 @import 'includes/functions';
 @import url('https://fonts.googleapis.com/css?family=Roboto+Condensed:300,400&subset=latin-ext');
 @import "common";
 @import "header-section";
 @import "rwd-section";
+@import "technology-section";
