--- a/sass/_common.scss
+++ b/sass/_common.scss
@@ -20,6 +20,13 @@ h1 {
   }
 }
 
+h2 {
+  font-family: 'Roboto Condensed', sans-serif;
+  font-size: 20px;
+  color: #212121;
+  font-weight: 350;
+}
+
 p {
   font-family: 'Roboto Condensed', sans-serif;
   font-size: 16px;
